--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # .env
-DISCORD_TOKEN=NjYyMzQ1OTg3Mzg5NTIxOTcw.Xg4ztA.kLoow1lOa8Te8kSlgl2R875jx18
+DISCORD_TOKEN=<put_teh_token_here_without_teh_angle_brackets>
 
