--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # .env
-DISCORD_TOKEN=NjYyMzQ1OTg3Mzg5NTIxOTcw.Xg4ztA.kLoow1lOa8Te8kSlgl2R875jx18
+DISCORD_TOKEN=NjYyMzQ1OTg3Mzg5NTIxOTcw.Xg5kVQ.P1KdU_x8gJeN5gXw1hYSCos1mlM
+
 
