--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 # .env
-DISCORD_TOKEN=NjYyMzQ1OTg3Mzg5NTIxOTcw.Xg5kVQ.P1KdU_x8gJeN5gXw1hYSCos1mlM
-
-
+DISCORD_TOKEN=NjYyMzQ1OTg3Mzg5NTIxOTcw.Xim4EA.D9cUJAFHx1EAk6m3SCm2H2wA3b0
+MEME=[A, B, C]
